added few views + tests