@@ -1,64 +1,63 @@
 package org.pl.deenes.services;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.pl.deenes.model.Line;
 import org.pl.deenes.model.TrainStats;
-import org.pl.deenes.services.interfaces.TrainStatsService;
 
-import java.util.LinkedList;
-import java.util.List;
+import java.util.*;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class TrainStatsServiceImplTest {
-    private TrainStatsService trainStatsService;
-
     @Mock
     private CalculateKilometersServiceImpl calculateKilometersService;
 
-    @BeforeEach
-    public void setup() {
-        //MockitoAnnotations.openMocks(this);
-        trainStatsService = new TrainStatsServiceImpl(10.0, calculateKilometersService);
-    }
+    @InjectMocks
+    private TrainStatsServiceImpl trainStatsService;
 
     @Test
-    @Disabled
     void testCalculateKilometers() {
-        LinkedList<Line> lineList = new LinkedList<>();
-        lineList.add(new Line(1, new LinkedList<>(List.of(0.0, 10.0))));
-        lineList.add(new Line(2, new LinkedList<>(List.of(0.0, 5.0, 10.0))));
-        lineList.add(new Line(3, new LinkedList<>(List.of(0.0, 20.0))));
-        when(calculateKilometersService.createLinesAndAddToLineList(10.0)).thenReturn(lineList);
+        TrainStatsServiceImpl trainStatsService = new TrainStatsServiceImpl(1000.0, calculateKilometersService);
+        Line line1 = new Line(1, List.of(1.0, 55.5));
+        Line line2 = new Line(2, List.of(50.0, 55.5));
+        List<Line> lineList = new ArrayList<>((Arrays.asList(line1, line2)));
 
-        //TrainStats expectedTrainStats = new TrainStats(lineList);
-        //expectedTrainStats.setHowManyKilometers(40.0);
+        double lastKilometer = 1000.0;
 
-        TrainStats actualTrainStats = trainStatsService.calculateKilometers(10.0);
+        LinkedList<Line> mockLineList = new LinkedList<>(List.of(line1, line2));
+        when(calculateKilometersService.createLinesAndAddToLineList(lastKilometer)).thenReturn(mockLineList);
 
-        //Assertions.assertEquals(expectedTrainStats, actualTrainStats);
 
+        trainStatsService.calculateKilometersForEachLine(lineList);
+
+        assertThat(line1.getSize()).isEqualTo(54.5);
+        assertThat(line2.getSize()).isEqualTo(5.5);
+
+
+        TrainStats trainStats = trainStatsService.calculateKilometers(lastKilometer);
+
+
+        assertThat(trainStats.getHowManyKilometers()).isEqualTo(60.0);
+        assertThat(trainStats.getLineList()).isEqualTo(lineList);
     }
 
     @Test
-    @Disabled
-    void testCalculateKilometersForEmptyLineList() {
-        LinkedList<Line> lineList = new LinkedList<>();
-        when(calculateKilometersService.createLinesAndAddToLineList(10.0)).thenReturn(lineList);
+    void testMapWithLineNumberAndFirstLastKilometer() {
+        Line line1 = new Line(1, List.of(1.0, 55.5));
+        Line line2 = new Line(2, List.of(50.0, 55.5));
 
-        // TrainStats expectedTrainStats = new TrainStats(lineList);
-        // expectedTrainStats.setHowManyKilometers(0.0);
+        List<Line> lineList = Arrays.asList(line1, line2);
 
-        TrainStats actualTrainStats = trainStatsService.calculateKilometers(10.0);
+        Map<Integer, List<Double>> result = trainStatsService.mapWithLineNumberAndFirstLastKilometer(lineList);
 
-        //Assertions.assertEquals(expectedTrainStats, actualTrainStats);
+        assertThat(result).containsOnlyKeys(1, 2);
+        assertThat(result.get(1)).containsExactly(1.0, 55.5);
+        assertThat(result.get(2)).containsExactly(50.0, 55.5);
     }
-
-
 }
